--- a/fenetrelocation.ui
+++ b/fenetrelocation.ui
@@ -66,6 +66,9 @@
     <property name="checked">
      <bool>true</bool>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QRadioButton" name="busButton">
     <property name="geometry">
@@ -79,6 +82,9 @@
     <property name="text">
      <string>Bus</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
    <widget class="QRadioButton" name="bikeButton">
     <property name="geometry">
@@ -92,19 +98,31 @@
     <property name="text">
      <string>Vélo</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">buttonGroup</string>
+    </attribute>
    </widget>
-   <widget class="QListView" name="listVehicule">
+   <widget class="QListWidget" name="listVehicule">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>90</y>
-      <width>251</width>
-      <height>261</height>
+      <x>125</x>
+      <y>110</y>
+      <width>281</width>
+      <height>241</height>
      </rect>
+    </property>
+    <property name="selectionRectVisible">
+     <bool>false</bool>
+    </property>
+    <property name="currentRow">
+     <number>-1</number>
     </property>
    </widget>
   </widget>
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
