--- a/fenetrelocation.ui
+++ b/fenetrelocation.ui
@@ -119,6 +119,16 @@
     </property>
    </widget>
   </widget>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>571</width>
+     <height>18</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
