--- a/fenetreprobleme.ui
+++ b/fenetreprobleme.ui
@@ -22,7 +22,7 @@
      <height>431</height>
     </rect>
    </property>
-   <widget class="QLabel" name="succes_3">
+   <widget class="QLabel" name="problemQuote">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -46,20 +46,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="retour_3">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>113</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Menu</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="zoneAvis_3">
+   <widget class="QTextEdit" name="zoneProbleme">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -69,7 +56,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="sendAvis_3">
+   <widget class="QPushButton" name="sendProbleme">
     <property name="geometry">
      <rect>
       <x>220</x>
@@ -82,69 +69,17 @@
      <string>Envoyer</string>
     </property>
    </widget>
-   <widget class="QRadioButton" name="rate1_3">
+   <widget class="QPushButton" name="retour_3">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>160</y>
-      <width>31</width>
-      <height>20</height>
+      <x>10</x>
+      <y>10</y>
+      <width>113</width>
+      <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>1</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rate2_3">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>160</y>
-      <width>31</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>2</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rate3_3">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>160</y>
-      <width>31</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>3</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rate4_3">
-    <property name="geometry">
-     <rect>
-      <x>290</x>
-      <y>160</y>
-      <width>31</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>4</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rate5_3">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>160</y>
-      <width>31</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>5</string>
+     <string>Menu</string>
     </property>
    </widget>
   </widget>
