--- a/fenetrelocation.ui
+++ b/fenetrelocation.ui
@@ -47,6 +47,41 @@
     <property name="currentIndex">
      <number>0</number>
     </property>
+    <widget class="QWidget" name="choixDate">
+     <widget class="QDateEdit" name="dateDebut">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>70</y>
+        <width>110</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QDateEdit" name="dateFin">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>140</y>
+        <width>110</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="validationDate">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>300</y>
+        <width>113</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Valider</string>
+      </property>
+     </widget>
+    </widget>
     <widget class="QWidget" name="choixVehicule">
      <widget class="QPushButton" name="chooseButton">
       <property name="geometry">
@@ -82,7 +117,7 @@
        <rect>
         <x>170</x>
         <y>60</y>
-        <width>41</width>
+        <width>51</width>
         <height>20</height>
        </rect>
       </property>
@@ -98,7 +133,7 @@
        <rect>
         <x>70</x>
         <y>60</y>
-        <width>61</width>
+        <width>71</width>
         <height>20</height>
        </rect>
       </property>
@@ -120,7 +155,7 @@
        <rect>
         <x>250</x>
         <y>60</y>
-        <width>41</width>
+        <width>61</width>
         <height>20</height>
        </rect>
       </property>
@@ -136,9 +171,9 @@
      <widget class="QLabel" name="titrePage">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>20</y>
-        <width>341</width>
+        <x>50</x>
+        <y>10</y>
+        <width>281</width>
         <height>51</height>
        </rect>
       </property>
@@ -154,9 +189,9 @@
      <widget class="QLabel" name="fiche">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>60</x>
         <y>80</y>
-        <width>231</width>
+        <width>241</width>
         <height>181</height>
        </rect>
       </property>
@@ -168,7 +203,7 @@
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>280</y>
+        <y>290</y>
         <width>113</width>
         <height>32</height>
        </rect>
