--- a/fenetrelocation.ui
+++ b/fenetrelocation.ui
@@ -16,17 +16,17 @@
   <widget class="QWidget" name="centralWidget" native="true">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>541</width>
-     <height>411</height>
+     <x>10</x>
+     <y>10</y>
+     <width>551</width>
+     <height>441</height>
     </rect>
    </property>
    <widget class="QPushButton" name="retour">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>0</x>
+      <y>0</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -38,47 +38,83 @@
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>50</y>
-      <width>371</width>
-      <height>351</height>
+      <x>10</x>
+      <y>30</y>
+      <width>521</width>
+      <height>401</height>
      </rect>
     </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
     <widget class="QWidget" name="choixDate">
-     <widget class="QDateEdit" name="dateDebut">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>70</y>
-        <width>110</width>
-        <height>24</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QDateEdit" name="dateFin">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>140</y>
-        <width>110</width>
-        <height>24</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QPushButton" name="validationDate">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>300</y>
+        <x>190</x>
+        <y>370</y>
         <width>113</width>
         <height>32</height>
        </rect>
       </property>
       <property name="text">
        <string>Valider</string>
+      </property>
+     </widget>
+     <widget class="QCalendarWidget" name="dateDebut">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>0</y>
+        <width>320</width>
+        <height>173</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QCalendarWidget" name="dateFin">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>190</y>
+        <width>320</width>
+        <height>173</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelDebut">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>50</y>
+        <width>121</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>18</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Date de retrait</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelFin">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>250</y>
+        <width>121</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>18</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Date de rendu</string>
       </property>
      </widget>
     </widget>
