--- a/fenetrelocation.ui
+++ b/fenetrelocation.ui
@@ -22,7 +22,7 @@
      <height>441</height>
     </rect>
    </property>
-   <widget class="QPushButton" name="retour">
+   <widget class="QPushButton" name="menu">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -38,14 +38,14 @@
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>521</width>
+      <x>0</x>
+      <y>40</y>
+      <width>531</width>
       <height>401</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="choixDate">
      <widget class="QPushButton" name="validationDate">
@@ -265,9 +265,9 @@
      <widget class="QLabel" name="attributs">
       <property name="geometry">
        <rect>
-        <x>200</x>
+        <x>160</x>
         <y>110</y>
-        <width>61</width>
+        <width>101</width>
         <height>181</height>
        </rect>
       </property>
@@ -290,6 +290,19 @@
       </property>
      </widget>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="retour">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>0</y>
+      <width>113</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Retour</string>
+    </property>
    </widget>
   </widget>
  </widget>
