--- a/fenetreprobleme.ui
+++ b/fenetreprobleme.ui
@@ -69,7 +69,7 @@
      <string>Envoyer</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="retour_3">
+   <widget class="QPushButton" name="menu">
     <property name="geometry">
      <rect>
       <x>10</x>
