Début de la nouvelle itération, préparation de la page de choix des stations

--- a/fenetrelocation.ui
+++ b/fenetrelocation.ui
@@ -45,7 +45,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="choixDate">
      <widget class="QPushButton" name="validationDate">
@@ -316,6 +316,26 @@
       </property>
       <property name="text">
        <string/>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="choixStations">
+     <widget class="QLabel" name="titrePage_2">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>20</y>
+        <width>221</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>22</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Choix des stations</string>
       </property>
      </widget>
     </widget>
