--- a/fenetrelocation.ui
+++ b/fenetrelocation.ui
@@ -160,9 +160,6 @@
       <property name="text">
        <string>Bus</string>
       </property>
-      <attribute name="buttonGroup">
-       <string notr="true">buttonGroup</string>
-      </attribute>
      </widget>
      <widget class="QRadioButton" name="carButton">
       <property name="geometry">
@@ -182,9 +179,6 @@
       <property name="checked">
        <bool>true</bool>
       </property>
-      <attribute name="buttonGroup">
-       <string notr="true">buttonGroup</string>
-      </attribute>
      </widget>
      <widget class="QRadioButton" name="bikeButton">
       <property name="geometry">
@@ -198,9 +192,6 @@
       <property name="text">
        <string>Vélo</string>
       </property>
-      <attribute name="buttonGroup">
-       <string notr="true">buttonGroup</string>
-      </attribute>
      </widget>
     </widget>
     <widget class="QWidget" name="details">
@@ -320,7 +311,7 @@
      </widget>
     </widget>
     <widget class="QWidget" name="choixStations">
-     <widget class="QLabel" name="titrePage_2">
+     <widget class="QLabel" name="titreStations">
       <property name="geometry">
        <rect>
         <x>180</x>
@@ -336,6 +327,195 @@
       </property>
       <property name="text">
        <string>Choix des stations</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="validationAdresses">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>340</y>
+        <width>113</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Valider</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="boutonStationRetrait">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>70</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Station retrait</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">boutonsRetrait</string>
+      </attribute>
+     </widget>
+     <widget class="QRadioButton" name="boutonAdresseRetrait">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>70</y>
+        <width>161</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Adresse retrait (+5€)</string>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">boutonsRetrait</string>
+      </attribute>
+     </widget>
+     <widget class="QRadioButton" name="boutonStationRendu">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>210</y>
+        <width>121</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Station rendu</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">boutonsRendu</string>
+      </attribute>
+     </widget>
+     <widget class="QRadioButton" name="boutonAdresseRendu">
+      <property name="geometry">
+       <rect>
+        <x>280</x>
+        <y>210</y>
+        <width>161</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Adresse rendu (+5€)</string>
+      </property>
+      <attribute name="buttonGroup">
+       <string notr="true">boutonsRendu</string>
+      </attribute>
+     </widget>
+     <widget class="QStackedWidget" name="stackedRetrait">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>100</y>
+        <width>311</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <widget class="QWidget" name="page_2">
+       <widget class="QListWidget" name="champStationRetrait">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>281</width>
+          <height>81</height>
+         </rect>
+        </property>
+        <property name="selectionRectVisible">
+         <bool>false</bool>
+        </property>
+        <property name="currentRow">
+         <number>-1</number>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="page_3">
+       <widget class="QTextEdit" name="champAdresseRetrait">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>281</width>
+          <height>81</height>
+         </rect>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+     <widget class="QStackedWidget" name="stackedRendu">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>240</y>
+        <width>311</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <widget class="QWidget" name="page_4">
+       <widget class="QListWidget" name="champStationRendu">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>281</width>
+          <height>81</height>
+         </rect>
+        </property>
+        <property name="selectionRectVisible">
+         <bool>false</bool>
+        </property>
+        <property name="currentRow">
+         <number>-1</number>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="page_5">
+       <widget class="QTextEdit" name="champAdresseRendu">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>281</width>
+          <height>81</height>
+         </rect>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="pageRecap">
+     <widget class="QLabel" name="titreRecap">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>30</y>
+        <width>371</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>22</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Récapitulatif de votre location</string>
       </property>
      </widget>
     </widget>
@@ -358,6 +538,7 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
+  <buttongroup name="boutonsRetrait"/>
+  <buttongroup name="boutonsRendu"/>
  </buttongroups>
 </ui>
